added edit and delete function

--- a/index.html
+++ b/index.html
@@ -113,6 +113,25 @@
 
     <div class="task-details-overlay"></div>
 
+    <div class="edit-task-overlay">
+
+      <p class="task-overlay-title">Edit Task</p>
+      <input type="text" class="task-input" placeholder="What's your Task?" required>
+      <div class="wrapper">
+        <select name="subject" id="subject" class="subject-selector">
+          <option>Subject</option>
+          <option value="Deutsch">Deutsch</option>
+          <option value="Mathe">Mathe</option>
+          <option value="Englisch">Englisch</option>
+          <option value="Religion">Religion</option>
+          <option value="Geschichte">Geschichte</option>
+        </select>
+        <input type="date" name="task-date" id="date" class="date-input">
+      </div>
+      <button class="save-edit-btn">Save Changes</button>
+      
+    </div>
+
   </section>
   
   <!-- link js files -->
