--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <script src="scripts/navbar.js"></script>
   <script src="scripts/header.js"></script>
   <script src="scripts/task.js"></script>
-  <script src="scripts/task-overlay.js"></script>
+  <script src="scripts/task-overlays.js"></script>
 </body>
 
 </html>
